[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/hud/sprites/grid.png" type="Texture" id=1]
[ext_resource path="res://ui/hud/sprites/player-arrow.png" type="Texture" id=2]
[ext_resource path="res://ui/hud/miniMap.gd" type="Script" id=3]
[ext_resource path="res://ui/hud/sprites/quest-marker.png" type="Texture" id=4]

[node name="miniMap" type="MarginContainer"]
margin_right = 42.0
margin_bottom = 42.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frame" type="NinePatchRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 37.0
margin_bottom = 37.0
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="gridContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 37.0
margin_bottom = 37.0

[node name="grid" type="TextureRect" parent="gridContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="playerMarker" type="Sprite" parent="gridContainer/grid"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="questMarker" type="Sprite" parent="gridContainer/grid"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[connection signal="gui_input" from="." to="." method="_on_miniMap_gui_input"]
